[SECTION] hot-keyword: 완성

--- a/raccoon-shopping-express/views/index.html
+++ b/raccoon-shopping-express/views/index.html
@@ -562,148 +562,148 @@
                 </div>
               </div>
             </div>
-            <div class="hot-keyword__wrapper section_hot section_hit" style="display: none"></div>
-            <!-- <div id="topRecomKeywordWrap" class="#recomkeyword section_tab section_rank">
-              <div class="tit_info">
-                <h3 class="tit_home">쇼핑 급상승 키워드</h3>
+            <div class="hot-keyword__wrapper section--hot section--hit" style="display: none"></div>
+            <div id="top-recommend-keyword" class="section--tab section--rank">
+              <div class="title__hot-keyword">
+                <h3 class="title--txt">쇼핑 급상승 키워드</h3>
                 <span class="txt_info"></span>
               </div>
-              <div class="cont_item">
-                <ul class="list--item _GL" data-gg="{lk:pctop_reckword_c}">
-                  <li class="_GI_" data-gg="{p:D5100447906,o1:1,o2:1}">
-                    <strong class="tit_rank"><a href="/search/싱크대물막이/" target="_blank" class="_GC_">1 . 싱크대물막이</a></strong
-                    ><a href="/search/싱크대물막이/" class="@item_id:D5100447906 link_prod _GC_" style=""
+              <div class="contents--item">
+                <ul class="list--item _GL">
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/싱크대물막이/" target="_blank" class="_GC_">1 . 싱크대물막이</a></strong
+                    ><a href="/search/싱크대물막이/" class="link--product _GC_"
                       ><img
                         src="//shop1.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FD5100447906.jpg%3Fut%3D20201216170208"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="실리콘 흡착 싱크대물막이 1개"
-                      /><strong class="tit_g">실리콘 흡착 싱크대물막이 1개</strong><span class="txt_desc"><span class="num_price">7,820</span>원</span></a
+                      /><strong class="info--title">실리콘 흡착 싱크대물막이 1개</strong><span class="txt--description"><span class="num--price">7,820</span>원</span></a
                     >
                   </li>
-                  <li class="_GI_" data-gg="{p:D5096601663,o1:2,o2:2}">
-                    <strong class="tit_rank"><a href="/search/더치커피/" target="_blank" class="_GC_">2 . 더치커피</a></strong
-                    ><a href="/search/더치커피/" class="@item_id:D5096601663 link_prod _GC_" style=""
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/더치커피/" target="_blank" class="_GC_">2 . 더치커피</a></strong
+                    ><a href="/search/더치커피/" class="link--product _GC_"
                       ><img
                         src="//shop2.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FD5096601663.jpg%3Fut%3D20200703162742"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="하이드로 더치커피 30mlx100팩"
-                      /><strong class="tit_g">하이드로 더치커피 30mlx100팩</strong><span class="txt_desc"><span class="num_price">14,850</span>원</span></a
+                      /><strong class="info--title">하이드로 더치커피 30mlx100팩</strong><span class="txt--description"><span class="num--price">14,850</span>원</span></a
                     >
                   </li>
-                  <li class="_GI_" data-gg="{p:D5097274028,o1:3,o2:3}">
-                    <strong class="tit_rank"><a href="/search/울트라기어모니터/" target="_blank" class="_GC_">3 . 울트라기어모니터</a></strong
-                    ><a href="/search/울트라기어모니터/" class="@item_id:D5097274028 link_prod _GC_" style=""
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/울트라기어모니터/" target="_blank" class="_GC_">3 . 울트라기어모니터</a></strong
+                    ><a href="/search/울트라기어모니터/" class="link--product _GC_"
                       ><img
                         src="//shop1.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FD5097274028.jpg%3Fut%3D20200814171319"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="32GN550"
-                      /><strong class="tit_g">32GN550</strong><span class="txt_desc"><span class="num_price">319,000</span>원</span></a
+                      /><strong class="info--title">32GN550</strong><span class="txt--description"><span class="num--price">319,000</span>원</span></a
                     >
                   </li>
-                  <li class="_GI_" data-gg="{p:D5094239302,o1:4,o2:4}">
-                    <strong class="tit_rank"><a href="/search/착즙기/" target="_blank" class="_GC_">4 . 착즙기</a></strong
-                    ><a href="/search/착즙기/" class="@item_id:D5094239302 link_prod _GC_" style=""
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/착즙기/" target="_blank" class="_GC_">4 . 착즙기</a></strong
+                    ><a href="/search/착즙기/" class="link--product _GC_"
                       ><img
                         src="//shop1.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FD5094239302.jpg%3Fut%3D20200601232313"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="이지 H-200"
-                      /><strong class="tit_g">이지 H-200</strong><span class="txt_desc"><span class="num_price">381,650</span>원</span></a
+                      /><strong class="info--title">이지 H-200</strong><span class="txt--description"><span class="num--price">381,650</span>원</span></a
                     >
                   </li>
-                  <li class="_GI_" data-gg="{p:A5095114490,o1:5,o2:5}">
-                    <strong class="tit_rank"><a href="/search/오덴세/" target="_blank" class="_GC_">5 . 오덴세</a></strong
-                    ><a href="/search/오덴세/" class="@item_id:A5095114490 link_prod _GC_" style=""
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/오덴세/" target="_blank" class="_GC_">5 . 오덴세</a></strong
+                    ><a href="/search/오덴세/" class="link--product _GC_"
                       ><img
                         src="//shop1.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FA5095114490.jpg%3Fut%3D20200422122610"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="시손느 프리미엄 4인 홈세트 20p"
-                      /><strong class="tit_g">시손느 프리미엄 4인 홈세트 20p</strong><span class="txt_desc"><span class="num_price">283,450</span>원</span></a
+                      /><strong class="info--title">시손느 프리미엄 4인 홈세트 20p</strong><span class="txt--description"><span class="num--price">283,450</span>원</span></a
                     >
                   </li>
-                  <li class="_GI_" data-gg="{p:B5099244419,o1:6,o2:6}">
-                    <strong class="tit_rank"><a href="/search/저분자콜라겐/" target="_blank" class="_GC_">6 . 저분자콜라겐</a></strong
-                    ><a href="/search/저분자콜라겐/" class="@item_id:B5099244419 link_prod _GC_" style=""
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/저분자콜라겐/" target="_blank" class="_GC_">6 . 저분자콜라겐</a></strong
+                    ><a href="/search/저분자콜라겐/" class="link--product _GC_"
                       ><img
                         src="//shop2.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FB5099244419.jpg%3Fut%3D20201029223837"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="저분자 피쉬 콜라겐 펩타이드 90포"
-                      /><strong class="tit_g">저분자 피쉬 콜라겐 펩타이드 90포</strong><span class="txt_desc"><span class="num_price">44,300</span>원</span></a
+                      /><strong class="info--title">저분자 피쉬 콜라겐 펩타이드 90포</strong><span class="txt--description"><span class="num--price">44,300</span>원</span></a
                     >
                   </li>
-                  <li class="_GI_" data-gg="{p:E3871791359,o1:7,o2:7}">
-                    <strong class="tit_rank"><a href="/search/샤워커튼/" target="_blank" class="_GC_">7 . 샤워커튼</a></strong
-                    ><a href="/search/샤워커튼/" class="@item_id:E3871791359 link_prod _GC_" style=""
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/샤워커튼/" target="_blank" class="_GC_">7 . 샤워커튼</a></strong
+                    ><a href="/search/샤워커튼/" class="link--product _GC_"
                       ><img
                         src="//shop2.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FE3871791359.jpg%3Fut%3D20170919120119"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="스테인리스 커브형 샤워커튼봉"
-                      /><strong class="tit_g">스테인리스 커브형 샤워커튼봉</strong><span class="txt_desc"><span class="num_price">7,180</span>원</span></a
+                      /><strong class="info--title">스테인리스 커브형 샤워커튼봉</strong><span class="txt--description"><span class="num--price">7,180</span>원</span></a
                     >
                   </li>
-                  <li class="_GI_" data-gg="{p:E5100094892,o1:8,o2:8}">
-                    <strong class="tit_rank"><a href="/search/아크릴가림막/" target="_blank" class="_GC_">8 . 아크릴가림막</a></strong
-                    ><a href="/search/아크릴가림막/" class="@item_id:E5100094892 link_prod _GC_" style=""
+                  <li class="_GI_">
+                    <strong class="title--rank"><a href="/search/아크릴가림막/" target="_blank" class="_GC_">8 . 아크릴가림막</a></strong
+                    ><a href="/search/아크릴가림막/" class="link--product _GC_"
                       ><img
                         src="//shop1.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FE5100094892.jpg%3Fut%3D20201128124546"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="식당칸막이 아크릴 가림막 길이 높이 투명 [60X60CM]"
-                      /><strong class="tit_g">식당칸막이 아크릴 가림막 길이 높이 투명 [60X60CM]</strong><span class="txt_desc"><span class="num_price">15,900</span>원</span></a
+                      /><strong class="info--title">식당칸막이 아크릴 가림막 길이 높이 투명 [60X60CM]</strong><span class="txt--description"><span class="num--price">15,900</span>원</span></a
                     >
                   </li>
-                  <li class="no_normal _GI_" data-gg="{p:D5101572701,o1:9,o2:9}">
-                    <strong class="tit_rank"><a href="/search/낮잠이불/" target="_blank" class="_GC_">9 . 낮잠이불</a></strong
-                    ><a href="/search/낮잠이불/" class="@item_id:D5101572701 link_prod _GC_" style=""
+                  <li class="no_normal _GI_">
+                    <strong class="title--rank"><a href="/search/낮잠이불/" target="_blank" class="_GC_">9 . 낮잠이불</a></strong
+                    ><a href="/search/낮잠이불/" class="link--product _GC_"
                       ><img
                         src="//shop2.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FD5101572701.jpg%3Fut%3D20210121135858"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="베이비 포리 순면 낮잠이불 풀세트"
-                      /><strong class="tit_g">베이비 포리 순면 낮잠이불 풀세트</strong><span class="txt_desc"><span class="num_price">35,900</span>원</span></a
+                      /><strong class="info--title">베이비 포리 순면 낮잠이불 풀세트</strong><span class="txt--description"><span class="num--price">35,900</span>원</span></a
                     >
                   </li>
-                  <li class="no_normal _GI_" data-gg="{p:Q12024292285,o1:10,o2:10}">
-                    <strong class="tit_rank"><a href="/search/뉴발란스327/" target="_blank" class="_GC_">10 . 뉴발란스327</a></strong
-                    ><a href="/search/뉴발란스327/" class="@item_id:Q12024292285 link_prod _GC_" style=""
+                  <li class="no_normal _GI_">
+                    <strong class="title--rank"><a href="/search/뉴발란스327/" target="_blank" class="_GC_">10 . 뉴발란스327</a></strong
+                    ><a href="/search/뉴발란스327/" class="link--product _GC_"
                       ><img
                         src="//shop2.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FQ12024292285.jpg%3Fut%3D20210121080435"
                         onerror="this.src='//shop1.daumcdn.net/search/cdn/simage/shopping/img/nothumb_200.gif'"
                         width="200"
                         height="200"
-                        class="img_g"
+                        class="image-group"
                         alt="뉴발란스 327 솔트 화이트 블랙 흰검 흰색 MS327FE"
-                      /><strong class="tit_g">뉴발란스 327 솔트 화이트 블랙 흰검 흰색 MS327FE</strong><span class="txt_desc"><span class="num_price">128,000</span>원</span></a
+                      /><strong class="info--title">뉴발란스 327 솔트 화이트 블랙 흰검 흰색 MS327FE</strong><span class="txt--description"><span class="num--price">128,000</span>원</span></a
                     >
                   </li>
                 </ul>
                 <span class="bg_loading" style="display: none"><span class="ico_home">상품 목록 로딩 중</span></span>
               </div>
-            </div> -->
+            </div>
             <div class="#foru section_tab section_how" style="display: none"></div>
           </div>
         </div>
