--- a/raccoon-shopping-express/views/main.scss
+++ b/raccoon-shopping-express/views/main.scss
@@ -774,6 +774,7 @@ section {
                   -webkit-line-clamp: 2;
                   overflow: hidden;
                   width: 100%;
+                  text-align: left;
                 }
                 .detail--price {
                   display: block;
@@ -832,6 +833,120 @@ section {
         }
       }
       .hot-keyword__wrapper {
+      }
+      .section--hot {
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+        margin-top: 45px;
+      }
+      .section--hit {
+      }
+
+      .section--tab {
+        width: 1276px;
+        overflow: visible;
+        position: relative;
+        // width: 973px;
+        margin: 50px auto 0;
+        clear: both;
+      }
+      .section--rank {
+      }
+
+      #top-recommend-keyword {
+        .title__hot-keyword {
+          overflow: hidden;
+          width: 100%;
+          height: 24px;
+          margin-bottom: 11px;
+
+          .title--txt {
+            float: left;
+            height: 24px;
+            font-weight: 400;
+            font-size: 22px;
+            line-height: 22px;
+            color: #000;
+            letter-spacing: -2px;
+          }
+          .txt_info {
+            float: left;
+            margin: 4px 0 0 9px;
+            font-size: 11px;
+            line-height: 15px;
+            letter-spacing: 0;
+            color: #999;
+          }
+        }
+
+        .contents--item {
+          width: 1274px;
+          height: 667px;
+          border: 1px solid #e4e4e4;
+          overflow: hidden;
+          position: relative;
+          float: left;
+          z-index: 0;
+
+          .list--item {
+            width: 1276px;
+            display: block;
+            overflow: hidden;
+            background: #fff;
+
+            li {
+              padding: 20px 27px;
+              height: 293px;
+              width: 200px;
+              text-align: left;
+              overflow: hidden;
+              float: left;
+              position: relative;
+              border-right: 1px solid #f1f1f1;
+              border-bottom: 1px solid #f1f1f1;
+              line-height: 14px;
+              letter-spacing: -1px;
+
+              .title--rank {
+                display: block;
+                padding-bottom: 15px;
+                font-size: 14px;
+                text-align: left;
+                font-weight: 600;
+              }
+              .link--product {
+                display: block;
+                overflow: hidden;
+                position: relative;
+                text-decoration: none;
+
+                .img-group {
+                  vertical-align: top;
+                }
+                .info--title {
+                  overflow: hidden;
+                  width: 100%;
+                  height: 30px;
+                  margin: 5px 0 12px;
+                  font-weight: 400;
+                  line-height: 16px;
+                  display: block;
+                }
+                .txt--description {
+                  display: block;
+                  font-weight: 700;
+                  letter-spacing: 0;
+                  .num--price {
+                    font-weight: 600;
+                  }
+                }
+              }
+            }
+            .bg_loading {
+            }
+          }
+        }
       }
     }
   }
