--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -132,6 +132,26 @@ main {
     }
   }
 }
+//더보기
+.banner-more {
+  width: 100%;
+  height: 60px;
+  background-color: #dadada;
+  text-align: center;
+  line-height: 60px;
+  .more-text-container {
+    width: 150px;
+    height: 60px;
+    margin: auto;
+    display: flex;
+    .text-index {
+      align-self: baseline;
+      font-size: 0.7rem;
+      line-height: 55px;
+      margin: 0 10px 0 1px;
+    }
+  }
+}
 
 //hot theme
 .hot-theme {
