[SECTION] 마지막 세션 scss 구조 완성 / 다음부턴 철저하게 작전을 세우고 하자. 이건 아니다...

--- a/raccoon-shopping-express/views/index.html
+++ b/raccoon-shopping-express/views/index.html
@@ -707,6 +707,237 @@
             <div class="#foru section_tab section_how" style="display: none"></div>
           </div>
         </div>
+
+        <div class="contents__etc">
+          <div class="banner--item" style="display: none"></div>
+          <div class="shopping-partner__wrapper">
+            <h3 class="title--text">쇼핑하우 파트너</h3>
+            <div class="section__etc">
+              <div class="contents-partner">
+                <div class="parnter--category">
+                  <strong class="title--mall">오픈마켓</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">G마켓</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">옥션</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">11번가</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">인터파크</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">롯데온</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">qoo10</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">쿠팡</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">이베이쇼핑</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="partner--category">
+                  <strong class="title--mall">백화점</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">AKmall</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">롯데백화점</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">갤러리아몰</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">SSG</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">SM면세점</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="partner--category">
+                  <strong class="title--mall">홈쇼핑</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">CJ mall</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">롯데홈쇼핑</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">GS SHOP</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">현대 Hmall</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">NSmall</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">홈&amp;쇼핑</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">K쇼핑</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">신세계티비쇼핑</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">공영홈쇼핑</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="partner--category">
+                  <strong class="title--mall">마트/생활</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">홈플러스</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">NH마켓</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">롯데마트</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">텐바이텐</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">제로투세븐</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">동원몰</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">CJ더마켓</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">알파몰</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">아이소이</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">1300k</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">사조몰</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">다이소몰</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="partner--category">
+                  <strong class="title--mall">소셜</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">G9</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">위메프</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">티몬</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="partner--category">
+                  <strong class="title--mall">패션</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">하프클럽</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">패션플러스</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">아이스타일24</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">LFmall</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">보리보리</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">머스트잇</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">위즈위드</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">무신사스토어</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">품바이</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">루이까또즈</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">마이클코어스</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">가방팝</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">프리쉽</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="partner--category">
+                  <strong class="title--mall">레저/취미</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">오케이몰</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">고르고타고</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="partner--category">
+                  <strong class="title--mall">도서/공연</strong>
+                  <ul class="list--mall">
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">YES24 티켓</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">G마켓 티켓</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">옥션 티켓</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">티켓 링크</a>
+                    </li>
+                    <li class="_GI_">
+                      <a href="#" target="_blank" class="link--mall">인터파크 티켓</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <button type="button" class="button--home">더보기</button>
+            </div>
+            <a href="/siso/p/partner" class="link--all">전체보기</a>
+          </div>
+          <div class="notice__wrapper">
+            <div class="section_notice">
+              <h2 class="tit_notice">공지사항</h2>
+              <a href="http://shopping.daum.net/siso/p/notice/detail/noticeId:651&amp;pageNum:1" class="link_notice _GC_">[공지] 카카오쇼핑 이용약관 개정 안내 (2020.11.12 시행)</a
+              ><span class="ico_comm2 ico_new">NEW</span>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
