--- a/raccoon-shopping-express/views/main.scss
+++ b/raccoon-shopping-express/views/main.scss
@@ -951,10 +951,40 @@ section {
     }
   }
 
-  .content__etc {
-    .shopping--partner {
+  .contents__etc {
+    .banner--item {
     }
-    .notice--wrapper {
+    .shopping--partner__wrapper {
+      .title--text {
+      }
+      .section__etc {
+        .contents-partner {
+          .partner--category {
+            .tltle--mall {
+            }
+            .list--mall {
+              .link--mall {
+              }
+            }
+          }
+        }
+        .button--home {
+        }
+      }
+      .link--all {
+      }
+    }
+    .notice__wrapper {
+      .section_notice {
+        .tit_notice {
+        }
+        .link_notice {
+        }
+        .ico_comm2 {
+        }
+        .ico_new {
+        }
+      }
     }
   }
 }
