--- a/shopping/public/stylesheets/main.css
+++ b/shopping/public/stylesheets/main.css
@@ -1,7 +1,19 @@
 /* init */
+ul, li {
+  list-style: none;
+  display: inline;
+}
+
+button, input {
+  border: transparent;
+  background-color: transparent;
+}
+
 .main_icon {
   width: 119px;
   height: 51px;
+  background: url("/images/logo_shw.png") no-repeat;
+  background-size: cover;
 }
 
 .header {
@@ -9,6 +21,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 43px;
+  min-width: 1000px;
 }
 .header .head_top {
   width: 843px;
@@ -19,10 +32,14 @@
 .header .nav {
   width: 100%;
   height: 55px;
+  position: relative;
+  margin-top: 40px;
+  border-top: 1px solid #efefef;
+  box-shadow: 0 1px rgba(0, 0, 0, 0.16);
 }
 
 .search_box {
-  border: 1px solid #333;
+  border: 1px solid #cecfd1;
   border-radius: 12px;
   width: 670px;
   height: 54px;
@@ -34,14 +51,59 @@
   width: 578px;
   height: 22px;
   margin-left: 30px;
-  border: transparent;
 }
-.search_box .search-btn {
-  background: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
-  background-size: 130px 90px;
-  border: transparent;
+.search_box .search_btn {
   width: 52px;
   height: 52px;
+  border: 0;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search_box .search_btn .icon_search {
+  background: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+  background-size: 130px 90px;
+  position: absolute;
+  width: 23px;
+  height: 23px;
+}
+
+.nav_wrapper {
+  margin: 0 auto;
+  padding: 0 15%;
+  min-width: 1000px;
+}
+.nav_wrapper .category {
+  float: left;
+  position: relative;
+}
+.nav_wrapper .nav_menu {
+  font-weight: 700;
+  float: left;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+}
+.nav_wrapper .nav_hashtag {
+  color: #888;
+  float: left;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+.nav_wrapper .nav_user {
+  min-width: 200px;
+  float: right;
+  position: absolute;
+}
+
+.menu_link {
+  padding: 0 13px;
+}
+
+.hash_link {
+  padding: 0 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
