--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -8,25 +8,49 @@
 
     <section class = "header">
         <div class = "head_top">
-             <img class = "main_icon" src = "/images/logo_shw.png">
+             <a class = "main_icon"></a>
              <div class = "search_box">
                  <input class = "search">
-                 <input type = "button" class = "search-btn">
+                 <button class = "search_btn">
+                     <span class = "icon_search"></span>
+                 </button>
              </div>
         </div>
         <div class = "nav">
-            <button class = "category"></button>
-            <a class = "hotDeal"></a>
-            <a class = "bestRank"></a>
-            <a class = "sale"></a>
-            <a class = "event"></a>
-            <a class = "healthFood"></a>
-            <a class = "seasonFood"></a>
-            <a class = "blueTooth"></a>
-            <a class = "curbleChair"></a>
-            <a class = "noteBook"></a>
-            <a class = "login"></a>
-            <a class = "pastViewProduct"></a>
+            <div class = nav_wrapper>
+                <div class = "category">
+                    <button>
+                        <span class = icon_hamburger>icon</span>
+                        카테고리
+                    </button>
+                </div>
+                <ul class = "nav_menu">
+                    <li><a class = "menu_link">핫딜</a></li>
+                    <li><a class = "menu_link">베스트100</a></li>
+                    <li><a class = "menu_link">할인특가</a></li>
+                    <li><a class = "menu_link">기획전</a></li>
+                </ul>
+                <ul class = "nav_hashtag">
+                    <li><a class = "hash_link">#건강식품</a></li>
+                    <li><a class = "hash_link">#제철음식</a></li>
+                    <li><a class = "hash_link">#블루투스이어폰</a></li>
+                    <li><a class = "hash_link">#커블체어</a></li>
+                    <li><a class = "hash_link">#노트북</a></li>
+                </ul>
+    
+                <ul class = "nav_user">
+                    <li>
+                        <a>
+                            <span class = "icon_human">icon</span>로그인
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <span class = "icon_layers">icon</span>최근본 상품
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -38,8 +62,6 @@
                     <div class = "left_button"></div>
                     <div class = "slide_images">
                         <img src = "/images/sub_01.png">
-                        <img src = "/images/sub_02.png">
-                        <img src = "/images/sub_03.png">
                         <div class = "slide_paging"></div>
                     </div>
                     <div class = "rightt_button"></div>
