--- a/shoppingHow/public/stylesheets/style.css
+++ b/shoppingHow/public/stylesheets/style.css
@@ -1,3 +1,3 @@
-*{padding:0;margin:0;box-sizing:border-box}
+*{padding:0;margin:0;box-sizing:border-box}header{padding:10px;margin:0px}
 
 /*# sourceMappingURL=style.css.map */
